# script_wrapper_mcp_server

./: .dockerignore  .mcp-config.json  DECOUPLED_ARCHITECTURE.md  DOCKER.md  Dockerfile  LICENSE  PLANNING.md  README.md  TASKS.md  TEST_FIX_SUMMARY.md  TEST_RESULTS.md  client.py  debug_mcp.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  run_server.sh  server_manager.py  simple_test_client.py  start_server.py
.cursor/: rules
scripts/: hello.sh  list_files.sh  system_info.sh
src/: .mcp-config.json
src/mcp_script_runner/: __init__.py  config.py  executor.py  server.py
tests/: __init__.py  test_config.py
